BUGFIX: input margin on small devices

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -57,8 +57,37 @@
   text-decoration: underline;
 }
 
+.default-input {
+  width: 100%;
+  max-width: 380px;
+  height: 60px;
+  margin-bottom: 20px;
+  border-radius: 3px;
+  font-size: 1.07rem;
+  color: var(--white);
+  background-color: var(--orange);
+  padding-left: 15px;
+}
+
+.default-input::placeholder,
+.default-input::-moz-placeholder {
+  color: var(--white);
+  opacity: 1;
+}
+
+
 @media (max-width: 1080px) {
   .banner, .banner img {
     display: none;
+  }
+
+  .form-container {
+    flex: 1 1 100%;
+  }
+}
+
+@media (max-width: 380px) {
+  .default-input, .form button:first-of-type {
+    width: 90%;
   }
 }
