--- a/src/app/shared/components/input/input.component.css
+++ b/src/app/shared/components/input/input.component.css
@@ -1,5 +1,5 @@
 input {
-  width: 380px;
+  width: 100%;
   max-width: 380px;
   height: 60px;
   margin-bottom: 20px;
